Package JSON and Install Instructions Update

--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
   "gitDependencies": {
     "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
     "io.crazyjackel.redmoon-depinjector": "https://github.com/crazyjackel/redmoon-depInjector.git"
-  }
+  },
+  "samples": [
+    {
+      "displayName": "Basic UI",
+      "description": "Contains Basic UI how to use the system",
+      "path": "Samples~/SamplesBasicUI"
+    }
+  ]
 }
