--- a/Samples/SamplesBasicUI/io.github.crazyjackel.reactiveKitSamples.asmdef
+++ b/Samples/SamplesBasicUI/io.github.crazyjackel.reactiveKitSamples.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "io.github.crazyjackel.reactiveKitSamples",
+    "name": "io.github.crazyjackel.reactiveKitSamples-Basic",
     "rootNamespace": "",
     "references": [
         "GUID:5e29b8baa43663b41b895c32ce9d38fc",
