--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "displayName": "Red Moon Reactive Kit",
   "name": "io.crazyjackel.redmoon-reactivekit",
   "unity": "2020.3",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "dependencies": {
     "com.unity.ui": "1.0.0-preview.18"
   },
@@ -19,7 +19,7 @@
     {
       "displayName": "Basic UI",
       "description": "Contains Basic UI how to use the system",
-      "path": "Samples~/SamplesBasicUI"
+      "path": "Samples/SamplesBasicUI"
     }
   ]
 }
